# mcp-cin7-core

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  render.yaml  requirements.txt
cin7_core_server/: cin7_client.py  http_server.py  server.py  server_http.py  server_stdio.py  stdio_server.py
cin7_core_server/resources/: auth.py  customers.py  products.py  prompts.py  purchase_orders.py  sales.py  snapshots.py  stock.py  suppliers.py  templates.py
cin7_core_server/utils/: logging.py  projection.py
docs/plans/: 2025-10-16-mcp-streamable-http.md  2025-11-10-stdio-transport-design.md  2025-11-10-stdio-transport-implementation.md  2026-01-06-stock-availability-design.md  2026-01-06-stock-availability-impl.md
src/mcp_cin7_core/: cin7_client.py  http_app.py  http_server.py  mcp_server.py  openapi.json  server.py  stdio_server.py
tests/: conftest.py  test_cin7_client.py  test_http_server.py  test_mcp_prompts.py  test_mcp_resources.py  test_mcp_server.py  test_mcp_snapshots.py
tests/fixtures/: __init__.py  common.py  customers.py  products.py  purchase_orders.py  sales.py  stock.py  stock_adjustments.py  stock_transfer_orders.py  stock_transfers.py  suppliers.py
