[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-cin7-core"
version = "0.1.0"
description = "MCP server to access Cin7 Core (DEAR) API"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }

dependencies = [
    "fastmcp>=2.0",
    "httpx",
    "python-dotenv",
    "scalekit-sdk-python>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
mcp-cin7-core = "mcp_cin7_core.http_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
