[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-cin7-core"
version = "0.1.0"
description = "MCP server to access Cin7 Core (DEAR) API"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tim Zenderman" }]
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.13.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "scalekit-sdk-python>=2.4.0",
    "uvicorn>=0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["cin7_core_server"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
